syntax = "proto3";

option go_package = "/pb";

message Post {
    int32 id = 1;
    int32 user_id = 2;
    string title = 3;
    string body = 4;
}

message GetPostsRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message GetPostsResponse {
    int32 count = 1;
    repeated Post posts = 2;
}

message GetPostByIdRequest {
    int32 id = 1;
}

message GetPostByIdResponse {
    Post post = 1;
}

message UpdatePostRequest {
    int32 id = 1;
    int32 user_id = 2;
    string title = 3;
    string body = 4;
}

message UpdatePostResponse {
    bool success = 1;
}

message DeletePostRequest {
    int32 id = 1;
}

message DeletePostResponse {
    bool success = 1;
}